package csd214.bookstore.pojos;

public interface SaleableItem {
    void sellItem();
    double getPrice();
}
